syntax = "proto3";

option csharp_namespace = "GrpcProductDemo.Protos";

import "google/protobuf/empty.proto";

package auth;

message CreateIdentityResponse{
	string token = 1;
}

service AuthProtoService {
	rpc GenerateToken(google.protobuf.Empty) returns(CreateIdentityResponse);
}
